--- a/DesignLayout/Properties/AndroidManifest.xml
+++ b/DesignLayout/Properties/AndroidManifest.xml
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.myue.designlayout">
-	<uses-sdk android:minSdkVersion="10" />
+	<uses-sdk android:minSdkVersion="17" />
 	<application android:allowBackup="true" android:icon="@mipmap/icon" android:label="@string/app_name">
+		<activity android:name=".SearchableActivity">
+			<intent-filter>
+				<action android:name="android.intent.action.SEARCH" />
+			</intent-filter>
+			<meta-data android:name="android.app.searchable" android:resource="@xml/searchable" />
+		</activity>
 	</application>
 </manifest>
